examples/test/testpolicy3674.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3674
  namespace: namespace276
spec:
  podSelector:
    matchLabels:
      key7: value17
      key16: value47
      key20: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value22
          key18: value41
      podSelector:
        matchLabels:
          key7: value25
